--- a/TEST5/WebContent/WEB-INF/web.xml
+++ b/TEST5/WebContent/WEB-INF/web.xml
@@ -16,15 +16,10 @@
 		<load-on-startup>2</load-on-startup>
 	</servlet>
 
-
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-
-	<welcome-file-list>
-		<welcome-file>login.jsp</welcome-file>
-	</welcome-file-list>
 
 	<filter>
 		<filter-name>Encoding</filter-name>
@@ -38,5 +33,9 @@
 		<filter-name>Encoding</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
 	
