--- a/USERS/WebContent/WEB-INF/web.xml
+++ b/USERS/WebContent/WEB-INF/web.xml
@@ -14,9 +14,7 @@
     <servlet-name>action</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
-  <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
-  </welcome-file-list>
+  
   <filter>
     <filter-name>Encoding</filter-name>
     <filter-class>filter.CharacterEncodingFilter</filter-class>
@@ -29,4 +27,9 @@
     <filter-name>Encoding</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
+	
